--- a/media/images/name-extractor.ipynb
+++ b/media/images/name-extractor.ipynb
@@ -103,6 +103,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newpath = 'c:\\\\Users\\\\sbogu\\\\Documents\\\\Repos\\\\bogoodski-ai\\\\media\\\\readme'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "readmeimages = get_file_names(newpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['canva.jpg',\n",
+       " 'carousel-prompt.jpg',\n",
+       " 'chatgpt-style-objective.jpg',\n",
+       " 'day0july312023.jpg',\n",
+       " 'dynamic-layout.gif',\n",
+       " 'dynamic-resize-gif.gif',\n",
+       " 'dynamic-resize.mp4',\n",
+       " 'dynamically-resize.jpg',\n",
+       " 'font-awesome.jpg',\n",
+       " 'initial-prompt.jpg',\n",
+       " 'initial-scaffold.jpg',\n",
+       " 'modal-css.jpg',\n",
+       " 'modal-html.jpg',\n",
+       " 'modal-js.jpg',\n",
+       " 'modal-prompt.jpg',\n",
+       " 'server.jpg',\n",
+       " 'update-carousel-prompt.jpg']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "readmeimages\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
